--- a/_config.yml
+++ b/_config.yml
@@ -182,6 +182,9 @@ exclude:
   - README.md
   - readme_preview/
   - vendor
+  - _pages/blog.md
+  - _pages/papers.md
+  - _pages/cv.md
 keep_files:
   - CNAME
   - .nojekyll
